syntax = "proto3";

option java_package = "dev.codeswamp.grpc";
option java_multiple_files = true;

service UserService {
  rpc FetchUserProfile(UserProfileRequest) returns (UserProfileResponse);
  rpc FetchUserProfiles(UserProfilesRequest) returns (UserProfilesResponse);
}

message UserProfileRequest{
  int64 userId = 1;
}

message UserProfileResponse{
  int64 userId = 1;
  string username = 2;
  string nickname = 3;
  string profileImage = 4;
}

message UserProfilesRequest{
  repeated int64 userId = 1;
}

message UserProfilesResponse{
  repeated UserProfileResponse profiles = 1;
}